LOGCXX-140: Handle leak with LoggingEvent::getCurrentThreadName